# cookiecutter-codemodder-plugin

./: .gitignore  LICENSE  MANIFEST.in  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py
src/custom_codemods/: __init__.py  custom_codemod.py
src/custom_codemods/api/: __init__.py  custom_codemod.py
{{ cookiecutter.project_slug }}/: .gitignore  MANIFEST.in  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: LICENSE  __init__.py  _version.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/api/: __init__.py  codemod.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/docs/: custom_python_custom-codemod.md
