[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
# TODO: Update with your own project metadata
authors = [{name = "Pixee", email = "python@pixee.ai"}]
# This enables the use of automatic versioning with setuptools_scm
dynamic = ["version"]
name = "custom-codemods" # TODO: Update with your own project name
requires-python = ">=3.10.0"
readme = "README.md"
license = {file = "LICENSE"}
description = "Template for building custom Python codemods"
dependencies = [
    "codemodder>=0.81.0",
    "libcst~=1.1.0",
]
keywords = ["custom", "codemod", "codemods", "security", "fix", "fixes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://example.com" # Use your own URL here
Repository = "https://github.com/pixee/python-codemod-plugin-template" # Use your own repo here


[project.optional-dependencies]
test = [
    "coverage>=7.3,<7.5",
    "Flask<4",
    "GitPython<4",
    "Jinja2~=3.1.2",
    "lxml>=4.9.3,<5.2.0",
    "mock==5.1.*",
    "pre-commit<4",
    "Pyjwt~=2.8.0",
    "pytest>=7.4,<8.1",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.12.0",
    "pytest-randomly==3.*",
    "pytest-xdist==3.*",
    "security~=1.2.0",
    "types-mock==5.1.*",
    "django>=4,<6",
    "numpy~=1.26.0",
    "flask_wtf~=1.2.0",
]
[project.entry-points.codemods]
# TODO: rename this entry point to match your project name
custom = "custom_codemods:registry"

[tool.setuptools]

[tool.setuptools.package-data]
"core_codemods.docs" = ["src/custom_codemods/docs/*.md"]

[tool.setuptools_scm]
version_file = "src/custom_codemods/_version.py"

[tool.pytest.ini_options]
# Ignore integration tests and ci tests by default
testpaths = ["tests"]

[tool.black]
extend-exclude = '''
/(
  tests/samples |
  src/codemodder/_version.py
)/
'''
